Resolves: tdf#141441 get and set selected entry when "unfrozen"

Change-Id: I4229460fb27ae3dc133c0f6a53c7792a87bf4db3